<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        >
    </item>

    <item app:showAsAction="always"
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        >

        <menu>

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name"/>

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date"
                />
        </menu>
    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:title="@string/hide_completed"
        android:checkable="true"
        app:showAsAction="never"
       />

    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:title="@string/delete_completed"
        app:showAsAction="never"
        />
</menu>