<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addeditfragment.AddEditFragment"


    >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|end"
        app:tint="@color/white"
        android:src="@drawable/ic_check_mark"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_anchor="@+id/cardView"
        app:layout_anchorGravity="center">

        <EditText
            android:id="@+id/edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Study"
            android:background="@drawable/edt_background"
            android:hint="@string/enter_a_task"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:id="@+id/cb_important"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cb_important"
                android:layout_alignBottom="@+id/cb_important"
                android:layout_toEndOf="@+id/cb_important"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/important_task"
                android:textColor="@color/black" />

        </RelativeLayout>

        <TextView
            android:id="@+id/date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Date Created: " />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>